# gpt-copy-v1

./: .gitignore  AGENTS.md  README.md
.agents/skills/code-review/: SKILL.md
.agents/skills/codedungeon/: SKILL.md
.agents/skills/main-quest/: SKILL.md
.agents/skills/one-shot/: SKILL.md
.agents/skills/side-quest/: SKILL.md
.codedungeon/: codedungeon.db  project-rules.compact.md  project-rules.json  project-rules.md
.codedungeon/commands/: code-review.md  codedungeon.md  main-quest.md  one-shot.md  side-quest.md
.codedungeon/phases/: throne-room-report.md
.codedungeon/plan/: arcplan.md  backendplan.md  frontendplan.md  pipeline-state.md  qa-plan.md
.codedungeon/plans/: lite-streaming.md
.codedungeon/reviews/: full-report.md  full-review.md  lite-streaming-report.md  oneshot-health-report.md
.codedungeon/state/: phase-0-output.md  phase-1-output.md  phase-2prime-output.md  phase-3-5-output.md  phase-4-output.md  phase-5-5-output.md  phase-5-6-output.md  phase-5-output.md  phase-6-output.md  phase-7-output.md
.codedungeon/tasks/: full-implementation.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: chat-shell.test.tsx  chat-shell.tsx
frontend/src/lib/: api.ts  schemas.ts
frontend/tests/: chat.spec.ts
